--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Practical 3 Web Project</h1>
+    <p>Follow a link to a page:</p>
+    <ul>
+        <li><</li>
+    </ul>
 </body>
 </html>
