--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" >
 </head>
 <body>
     <h1>Practical 3 Web Project</h1>
     <p>Follow a link to a page:</p>
     <ul>
-        <li><</li>
+        <li><a href="ollie.html">Ollie's page<a></li>
     </ul>
 </body>
 </html>
