push final page

--- a/ollie.html
+++ b/ollie.html
@@ -4,8 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.3/dist/pulse/bootstrap.min.css">
 </head>
 <body>
-    <h1>Why Computer Science is good for society</h1>
+    <h1>Why Computer Science is Good for Society</h1>
+    <p>Computer science plays a vital role in modern society, influencing various aspects of daily life and shaping the future. Here are some key benefits:</p>
+    
+    <ul>
+        <li>
+            <strong>Innovation:</strong>
+            <p>Computer science drives technological advancements that lead to new inventions and solutions. From artificial intelligence to robotics, these innovations can solve real-world problems and improve efficiency in numerous sectors.</p>
+        </li>
+        <li>
+            <strong>Education:</strong>
+            <p>It enhances learning experiences through online platforms and digital tools. Students can access a wealth of resources and engage in interactive learning, making education more accessible to everyone, regardless of location.</p>
+        </li>
+        <li>
+            <strong>Healthcare:</strong>
+            <p>Computer science improves patient care and research through data analysis, telemedicine, and electronic health records. These technologies enable better diagnosis, treatment, and management of diseases.</p>
+        </li>
+        <li>
+            <strong>Economy:</strong>
+            <p>The field fuels job creation and economic growth in tech-driven industries. As businesses increasingly rely on technology, skilled professionals in computer science are in high demand.</p>
+        </li>
+        <li>
+            <strong>Communication:</strong>
+            <p>It connects people globally through social media, email, and instant messaging. This enhanced communication fosters relationships, collaboration, and cultural exchange.</p>
+        </li>
+        <li>
+            <strong>Problem Solving:</strong>
+            <p>Computer science provides tools and methods to tackle complex societal challenges, such as climate change, poverty, and public health issues. Data analysis and simulations can help identify effective strategies and solutions.</p>
+        </li>
+        <li>
+            <strong>Security:</strong>
+            <p>As our reliance on technology grows, so does the need for robust security measures. Computer science enhances data protection and cybersecurity, safeguarding personal and organizational information against threats.</p>
+        </li>
+        <li>
+            <strong>Accessibility:</strong>
+            <p>Technological advancements help make information and services more accessible to people with disabilities. Innovations like screen readers and speech recognition improve their ability to interact with technology.</p>
+        </li>
+        <li>
+            <strong>Environmental Impact:</strong>
+            <p>Computer science can contribute to sustainability efforts through data analysis for resource management, optimizing energy consumption, and developing technologies for renewable energy.</p>
+        </li>
+    </ul>
+
+    <p>In conclusion, the impact of computer science on society is profound and multifaceted. Its applications enhance our lives, drive progress, and create opportunities for future generations.</p>
 </body>
 </html>
