--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Practical 3 Web Project</h1>
     <p>Follow a link to a page:</p>
     <ul>
-        <li><</li>
+        <li><a href="tarik.html">Tarik's Page</a></li>
     </ul>
 </body>
 </html>
