--- a/tarik.html
+++ b/tarik.html
@@ -1,8 +1,12 @@
-<html>
-    <head>
-        <title>page</title>
-    </head>
-    <body>
-        <p>hi</p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Page</title>
+    <link rel="stylesheet" type="text/css" href="tarik-style.css"> 
+</head>
+<body>
+    <header>Practical 3 - Tarik's Page</header>
+</body>
 </html>
